<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.q_style.ui.home.HomeFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.q_style.ui.gallery.GalleryFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.q_style.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="org.q_style.ui.tools.ToolsFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="org.q_style.ui.share.ShareFragment"
        android:label="@string/ic_settings"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="org.q_style.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_food"
        android:name="org.q_style.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />
</navigation>