<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_shop"
            android:iconTint="@color/colorAccent"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_video"
            android:iconTint="@color/colorAccent"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_music"
            android:iconTint="@color/colorAccent"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_book"
            android:iconTint="@color/colorAccent"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_food"
            android:iconTint="@color/colorAccent"
            android:title="@string/menu_food" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings"
                android:iconTint="@color/colorAccent"
                android:title="@string/ic_settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
